sample/error/gen_uarray-in-array.bfr
codegen [
  $build {
    a: array(_) {
      b: array(_) {
        x: cell;
      }
    }
  } in

  + a:b:x
]